GNOME Bugzilla – Bug 744777
check: cast element in ASSERT_SET_STATE.
Last modified: 2015-02-19 14:20:29 UTC
Avoiding the need to cast when calling the macro.
Created attachment 297256 [details] [review] check: cast element in ASSERT_SET_STATE.
Comment on attachment 297256 [details] [review] check: cast element in ASSERT_SET_STATE. This is fine of course
Review of attachment 297256 [details] [review]: commited as commit 0ee2183aa5182f72390ebeddadd858929fb2e748 Author: Mathieu Duponchelle <mathieu.duponchelle@opencreed.com> Date: Thu Feb 19 12:17:15 2015 +0100 check: cast element in ASSERT_SET_STATE. https://bugzilla.gnome.org/show_bug.cgi?id=744777