check: cast element in ASSERT_SET_STATE.

https://bugzilla.gnome.org/show_bug.cgi?id=744777